--- a/client/src/Instructions.css
+++ b/client/src/Instructions.css
@@ -1,8 +1,12 @@
-.App {
+.Instructions {
   text-align: center;
 }
 
-.App-header {
+.Instructions-logo {
+  width: 30vmin;
+}
+
+.Instructions-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -11,4 +15,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Instructions-link {
+  color: #61dafb;
 }
