remove list from instructions and slight layout improvement

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,6 +18,6 @@
   min-width: 200px;
   min-height: 50px;
   border-radius: 10px;
-  background-color: #271000;
+  background-color: #282c34;
   color:#ff6500
 }
