--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 .App {
   text-align: center;
   background-color: #282c34;
-  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,6 +17,14 @@
   min-width: 200px;
   min-height: 50px;
   border-radius: 10px;
+  margin-bottom:20px;  
   background-color: #282c34;
-  color:#ff6500
+  color:#ff6500;
+}
+
+.fund-data-container{
+  border: 2px solid #ff6500;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom:80px;  
 }
